[package]
name = "steamws"
description = "Set of binaries for working with Steam Workshop"
homepage = "https://github.com/wyozi/steamws/"
repository = "https://github.com/wyozi/steamws/"
readme = "README.md"
version = "0.1.0"
authors = ["wyozi"]
license = "MIT"
edition = "2018"

[features]
default = ["workshop", "vtf", "bsp"]
workshop = ["steamworks", "rust-lzma"]
bsp = ["zip"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
steamworks = { version = "0.6", optional = true }
byteorder = "1"
clap = "3.0.0-beta.1"
rust-lzma = { version = "0.5", optional = true }
globset = "0.4"
tempfile = "3"
err-derive = "0.2"
regex = "1"
lazy_static = "1"
petgraph = "0.5"
vtf = { version = "0.1", optional = true }
zip = { version = "0.5", default-features = false, optional = true }

[[bin]]
name = "gma"

[[bin]]
name = "mdl"

[[bin]]
name = "vtf"
required-features = ["vtf"]

[[bin]]
name = "workshop"
required-features = ["workshop"]

[[bin]]
name = "bsp"
required-features = ["bsp"]