[package]
name = "steamws"
description = "Set of binaries for working with Steam Workshop"
homepage = "https://github.com/wyozi/steamws/"
repository = "https://github.com/wyozi/steamws/"
readme = "README.md"
version = "0.1.0"
authors = ["wyozi"]
license = "MIT"
edition = "2018"

[features]
default = ["workshop", "vtf", "bsp"]
workshop = ["steamworks", "rust-lzma"]
bsp = ["strum", "zip"]
vtf = ["image", "parse-display", "num_enum"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
steamworks = { version = "0.10", optional = true }
byteorder = "1"
clap = { version = "4", features = ["derive"] }
rust-lzma = { version = "0.6", optional = true }
globset = "0.4"
tempfile = "3"
err-derive = "0.3"
regex = "1"
lazy_static = "1"
petgraph = "0.6"
parse-display = { version = "0.7.0", optional = true }
num_enum = { version = "0.5.7", optional = true }
image = { version = "0.24", optional = true }
zip = { version = "0.6", default-features = false, optional = true }
strum = { version = "0.24", optional = true, features = ["derive"] }
similar = { version = "2.2.1", default-features = false }
walkdir = "2.3.3"
colored = "2.0.0"
sha2 = "0.10.6"

[[bin]]
name = "gma"

[[bin]]
name = "mdl"

[[bin]]
name = "vtf"
required-features = ["vtf"]

[[bin]]
name = "workshop"
required-features = ["workshop"]

[[bin]]
name = "bsp"
required-features = ["bsp"]